# yolov5-detect-demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.sh  toolchain-aarch64.cmake
docs/: architecture-design.md  learning-roadmap.md  stage1-image-detect.md  stage2-video-detect.md  stage3-rtsp-detect.md  stage4-object-tracking.md  stage5-performance-profiling.md  stage6-rga-preprocessing.md  stage7-async-pipeline.md
scripts/: build-ffmpeg-aarch64.sh  build-opencv-aarch64.sh  build-x264-aarch64.sh
src/core/: async_pipeline.cc  async_pipeline.h  bounded_queue.h  detector.h  frame_pool.h  frame_source.h  output_sink.h  pipeline.cc  pipeline.h  preprocessor.h  trace.cc  trace.h  tracker.h  types.h
src/demo/: image_detect.cc  rtsp_detect.cc  tracking_detect.cc  video_detect.cc
src/detector/: yolov5_detector.cc  yolov5_detector.h
src/output/: image_file_sink.cc  image_file_sink.h  video_file_sink.cc  video_file_sink.h
src/preprocessor/: cpu_preprocessor.cc  cpu_preprocessor.h  rga_preprocessor.cc  rga_preprocessor.h
src/source/: image_source.cc  image_source.h  rtsp_source.cc  rtsp_source.h  video_file_source.cc  video_file_source.h
src/tracker/: byte_tracker.cc  byte_tracker.h  hungarian.cc  hungarian.h  kalman_filter.cc  kalman_filter.h
